--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name ="android:windowBackground">@drawable/dagger_koin</item>
     </style>
 
     <style name="Toolbar" parent="Theme.AppCompat.Light.DarkActionBar">
